# GPT-Ashisutanto

./: Cargo.toml  README.md  package-lock.json
ashisutanto-extension/: manibak.json  package-lock.json  package.json
ashisutanto-extension/public/: background.html  background.js  content.js  gpt_ashisutanto.js  gpt_ashisutanto_bg.wasm  index.html  manifest.json
ashisutanto-extension/src/: App.js
ashisutanto_extension/: background.js  gpt_ashisutanto.js  gpt_ashisutanto_bg.wasm  manifest.json
src/: gpt.rs  lib.rs
